# TurtleBot3_Search_and_Detect_Hackathon

./: Dockerfile  Dockerfile.example  README.md  load_env.sh  start_docker.sh
src/: CMakeLists.txt  package.xml
src/behavior_tree_coordinator/: detect_ball_node.py
src/behaviors/: GrootPalette.xml  HackathonTree.xml  MainTree.xml
src/behaviors/examples/: PeTRATreeForGroot.xml
src/config/: params.yaml
src/include/behavior_tree_coordinator/: default.h
src/include/behavior_tree_coordinator/actions/: ArmMovement.h  BaseMovement.h  BatteryCharging.h  GetBallPose.h  Spin.h  Wait.h
src/include/behavior_tree_coordinator/conditions/: CheckBattery.h  CheckStop.h  IsBallFound.h  IsGoalDone.h
src/launch/: demo.launch.py
src/src/: node.cpp
src/src/actions/: ArmMovement.cpp  BaseMovement.cpp  BatteryCharging.cpp  GetBallPose.cpp  Spin.cpp  Wait.cpp
src/src/conditions/: CheckBattery.cpp  CheckStop.cpp  IsBallFound.cpp  IsGoalDone.cpp
src/src/examples/: minimal_nav_action_node.cpp
