<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>behavior_tree_coordinator</name>
    <version>1.1.0</version>
    <description>
        This package provides the task coordinator for neobotix.
        It uses the BehaviorTree.CPP framework for abstract planning.
    </description>
    <maintainer email="andreas.zachariae@gmail.com">Andreas Zachariae</maintainer>
    <license>TODO</license>
    <author>Andreas Zachariae</author>
    <author>Moritz Weisenböhler</author>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <depend>rclpy</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>behaviortree_ros</depend>
    <depend>petra_interfaces</depend>
    <depend>tf2_ros</depend>
    <depend>cpp_core</depend>
    <depend>nav2_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
